    issues with 'pip install -e' and './setup.py nosetests' not respecting the
    setup.cfg configuration directives for the build_ext command. Also
    enhanced our build_ext command to respect the dry_run mode.

    * .ycm_extra_conf.py: Update our custom YouCompleteMe configuration to
    query the package configuration for the proper compilation flags.

2013-03-27  Michael R. Crusoe  <mcrusoe@msu.edu>

    * The system zlib and bzip2 libraries are now used instead of the bundled
    versions if specified in setup.cfg or the command line.

2014-03-25  Michael R. Crusoe  <mcrusoe@msu.edu>

    * Makefile: update cppcheck command to match new version of Jenkins
    plugin. Now ignores the lib/test*.cc files.

2013-03-20  Michael R. Crusoe  <mcrusoe@msu.edu>

    * lib/storage.hh,khmer/_khmermodule.cc,lib/{readtable,read_parsers}.hh:
    remove unused storage.hh

2014-03-19  Qingpeng Zhang  <qingpeng@msu.edu>

    * hashbits.cc: fix a bug of 'Division or modulo by zero' described in #182
    * test_scripts.py: add test code for count-overlap.py
    * count-overlap.py: (fix a bug because of a typo and hashsize was replaced
    by min_hashsize)
    * count-overlap.py: needs hashbits table generated by load-graph.py. 
    This information is added to the "usage:" line.
    * count-overlap.py: fix minor PyLint issues

2014-03-19  Michael R. Crusoe  <mcrusoe@msu.edu>

    * Update bundled zlib version to 1.2.8 from 1.2.3. Changes of note:
    "Wholesale replacement of gz* functions with faster versions"
    "Added LFS (Large File Summit) support for 64-bit file offsets"
    "Fix serious but very rare decompression bug"

2014-03-19  Titus Brown  <t@idyll.org>

    * Makefile: update documentation on targets at top; clean autopep8 output.
    * test_counting_single.py: fixed pep8 violations in spacing
    * test_scripts.py: eliminate popenscript in favor of proper SystemExit
	handling in runscript; fix pep8 violations.
